<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_categories"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_categories" />

    <item
        android:id="@+id/nav_cart"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/nav_cart" />

    <item
        android:id="@+id/nav_orders"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_orders" />

    <item
        android:id="@+id/nav_account"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_account" />
</menu>
